Finalize UFID v0.7.0
